# tiago_wbc

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  tiago_test_plugins.xml  tiago_wbc_plugins.xml
config/: admitance_pose.yaml  position_joints.yaml  tiago_admitance_wbc.yaml  tiago_capsule_omni_base_params.txt  tiago_capsule_params.txt  tiago_collision_operations.xml  tiago_diffdrive_wbc.yaml  tiago_environment_collision_avoidance_wbc.yaml  tiago_extra_collision_descriptions.yaml  tiago_fixed_base_ft_wbc.yaml  tiago_fixed_base_wbc.yaml  tiago_mobile_base_wbc.yaml  tiago_position_joints.yaml  tiago_steel_capsule_params.txt  tiago_wbc.yaml  tiago_wbc_rcp.yaml
config/old_config_files/: tiago_admitance_wbc.yaml  tiago_virtual_admitance_wbc.yaml  tiago_wbc_extra.yaml  tiago_wbc_rcp.yaml
config/rviz/: tiago_wbc.rviz
include/tiago_wbc/: wbc_tests_fixture.h
launch/: push_admitance_task.launch  push_reference_tasks.launch  tiago_capsule_description.launch  tiago_environment_collision_avoidance_wbc.launch  tiago_steel_capsule_description.launch  tiago_wbc.launch  tiago_wbc_standalone.launch  tiago_wbc_standalone_debug.launch
src/: push_interactive_marker_task.cpp  test_stacks.cpp  tiago_environment_collision_stack.cpp  tiago_rcp_stack.cpp  tiago_stacks.cpp
src/old_stacks/: tiago_rcp_stack.cpp
src/old_stacks/rcp/examples/: pushPopTasksExample.cpp  pushTaskExampleTiago.cpp  pushTaskExampleTiagoROS.cpp
src/rcp/: CMakeLists.txt
src/rcp/examples/: listStackExample.cpp  popTaskExample.cpp  pushTaskExample.cpp  pushTaskExampleTiago.cpp  pushTaskExampleTiagoROS.cpp
src/rcp/stacks/: marco_rpc_stack.cpp  reemc_rpc_stack.cpp  tiago_rpc_stack.cpp
test/: move_tip_smach_c_test.cpp  move_tip_smach_c_test.test  pop_bookkept_test.cpp  pop_bookkept_test.test  push_tasks_test.cpp  push_tasks_test.test  wbc_tests_fixture.h
